[tool.poetry]
name = "option-on-target-volatility-funds"
version = "0.1.0"
description = "Application of Deep Reinforcement Learning techniques for pricing options on target volatility strategies"
authors = ["Stefano Polo <sp.stefano.polo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.2 <3.8"
numpy = "1.21"
scipy = "1.7.2"
tensorflow = "1.14"
pandas = "1.3.5"
matplotlib = "3.4.3"
gym = ">=0.15.4, <0.16.0"
tensorboard = "1.14.0"
py-vollib = "^1.0.1"
protobuf = "3.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
pytest = "^7.4.0"
notebook = "^6.5.4"
jupytext = "^1.14.7"
autoflake = "0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
